# PythonPrograms

./: README.md  topics.txt
python-practice/: .editorconfig  .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  Makefile  PROJECT_COMPLETE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
python-practice/.github/workflows/: python-tests.yml
python-practice/docs/: index.md  patterns.md  problems.md
python-practice/docs/cheatsheets/: README.md  complexity.md  pytest.md  regex.md
python-practice/scripts/: run_all.ps1  run_all.sh  run_fast.ps1  run_fast.sh  setup_env.ps1  setup_env.sh
python-practice/src/: __init__.py
python-practice/src/data/: config.json  emails.txt
python-practice/src/utils/: __init__.py  decorators.py  io_utils.py  timing.py
python-practice/src/week01_basics/: __init__.py  anagram.py  fizzbuzz.py  flatten_one_level.py  freq_counter.py  matrix_transpose.py  palindrome.py  rle_compress.py  rotate_right.py  stats.py  unique_order.py
python-practice/src/week02_io_regex/: __init__.py  email_extractor.py
python-practice/src/week03_ds_algo/: __init__.py
python-practice/src/week04_oop_design/: __init__.py
python-practice/src/week05_concurrency_perf/: __init__.py
python-practice/tests/: conftest.py
python-practice/tests/integration/: test_cli_tool.py  test_plugin_loader.py
python-practice/tests/unit/test_week01_basics/: test_palindrome.py  test_rle_compress.py  test_stats.py
